﻿A changelog for recent builds:

Generally created by hand after running:
   hg log -rb2xx: > log.out
However contributors are encouraged to add their own entries for their work.

Note that build 228 was the last version supporting Python 2.

Since build 302:
----------------
* Binary installers for 32-bit 3.10+ are no longer released (#1805)

Since build 301:
----------------
* Fixed support for unicode as a `win32crypt.CREDENTIAL_ATTRIBUTE.Value`

* Support for Python 10, dropped support for Python 3.5 (3.5 security support
  ended 13 Sep 2020)

* Merged win2kras into win32ras. In the unlikely case that anyone is still
  using win2kras, there is a win2kras.py that imports all of win32ras. If you
  import win2kras and it fails with 'you must import win32ras first', then it
  means an old win2kras.pyd exists, which you should remove.

* github branch 'master' was renamed to 'main'.

Since build 300:
----------------
* Fix some confusion on how dynamic COM object properties work. The old
  code was confused, so there's a chance there will be some subtle
  regression here - please open a bug if you find anything, but this
  should fix #1427.

* COM objects are now registered with the full path to pythoncomXX.dll, fixes
  #1704.

* Creating a `win32crypt.CRYPT_ATTRIBUTE` object now correctly sets `cbData`.

* Add wrap and unwrap operations defined in the GSSAPI to the sspi module
  and enhance the examples given in this module.
  (#1692, Emmanuel Coirier)

* Fix a bug in `win32profile.GetEnvironmentStrings()` relating to environment
  variables with an equals sign (@maxim-krikun in #1661)

* Fixed a bug where certain COM dates would fail to be converted to a Python
  datetime object with `ValueError: microsecond must be in 0..999999`. Shoutout
  to @hujiaxing for reporting and helping reproduce the issue (#1655)

* Added win32com.shell.SHGetKnownFolderPath() and related constants.

* CoClass objects should work better with special methods like __len__ etc.
  (#1699)
